# membrane

./: .gitignore  Blog.md  Dockerfile  README.hf_space.md  README.md  client.py  models.py  openenv.yaml  pyproject.toml  requirements-train.txt  requirements.txt
docs/plots/: README.md  episode_returns.csv  grpo_training_metrics.csv  grpo_training_summary.json  grpo_training_summary.md  grpo_warmstart_summary.csv  grpo_warmstart_summary.md  rollout_summary.json
notebooks/: membrane_train_colab.ipynb
scripts/: judge_walkthrough.py  refresh_plots.sh  run_tests.sh  smoke_membrane_reward_training.py
scripts/analysis/: build_grpo_saturation_plot.py  build_reviewer_overview.py  build_warmstart_ablation_plot.py  eval_showcase_plot.py  harvest_continue_runs.py  replot_base_vs_trained.py  upload_showcase_to_hf_dataset.py
scripts/hf_jobs/: README.md  aggregate_hf_results.py  eval_base_vs_trained.py  submit_hf_jobs.py  train_grpo_job.py
server/: __init__.py  app.py  environment.py  graders.py  policy_engine.py  text_policy.py
tasks/: __init__.py  curriculum.py  scenario_loader.py  scenarios.py
tests/: test_curriculum_unit.py  test_engineering_edges.py  test_http_rollout.py  test_multi_agent_features.py  test_openenv_optional.py  test_p1_dyad.py  test_p2_team_memory.py  test_p3_refusal.py  test_p4_training.py  test_p6_surfaces.py  test_rollout_jsonl.py  test_scenario_loader.py  test_stub.py  test_triad_must_refuse.py
train/: __init__.py  compare_policies.py  policies.py  render_plots.py  render_png_matplotlib.py  rollout.py  unsloth_reward.py
(+20 files in other folders)
